--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Welcome friends and foe to my page.</p>
 </body>
+<p>I dont know how to code in HTML but I am learning.</p>
 </html>
