--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <p>Welcome friends and foe to my page.</p>
 </body>
 <p>I dont know how to code in HTML but I am learning.</p>
-<img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
+<img src="" alt="Math" width="500" height="333">
 </html>
