--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
 </body>
 <p>I dont know how to code in HTML but I am learning.</p>
 <img src="math_work.png" alt="Math" width="500" height="333">
+<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link to a Youtube video.</a>
 </html>
