--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <p>Welcome friends and foe to my page.</p>
 </body>
 <p>I dont know how to code in HTML but I am learning.</p>
-<img src="math_work.png" alt="Math" width="500" height="333">
+<img src="math_work.png" alt="Math" width="500" height="333"><br/>
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link to a Youtube video.</a>
 </html>
