--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
+<pre>
+        _/\_        
+      _/    \_      
+    _/        \_
+  _/____________\_
+ /|              |\
+/ |   __   ----  | \
+  |  |  |  [][]  |
+  |  | o|  ----  |
+  |  |__|        |
+  |______________|
+</pre>
 <body>
 <h1>Hello World</h1>
 <p>Welcome friends and foe to my page.</p>
