--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 / |   __   ----  | \                  
   |  |  |  [][]  |           /     |     \
   |  | o|  ----  |
-  |  |__|        |    o8o o8o o8o
-  |______________|     |   |   |
+  |  |__|        |    o8o OoO o8o OoO o8o OoO o8o
+  |______________|     |   |   |   |   |   |   |
 </pre>
 <body>
 <h1>Hello World</h1>
