--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 </pre>
 <body>
 <h1>Hello World</h1>
+<p id="time"></p>
+
+<script>
+var d = new Date();
+document.getElementById("time").innerHTML = d;
+</script>
+
 <p>Welcome friends and foe to my page.</p>
 </body>
 <p>I dont know how to code in HTML but I am learning.</p>
