Worked on the site.

--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
-<html>
-<pre>
-        _/\_   _                  ___
-      _/    \_| |      <    <    |   |    >    >  
-    _/        \_|            W   |___|   W    
-  _/____________\_      W     S         S     W
- /|              |\       S    /   |   \    S
-/ |   __   ----  | \                  
-  |  |  |  [][]  |           /     |     \
-  |  | o|  ----  |
-  |  |__|        |    o8o OoO o8o OoO o8o OoO o8o
-  |______________|     |   |   |   |   |   |   |
-</pre>
-<body>
-<h1>Hello World</h1>
-
-<p>Welcome friends and foe to my page.</p>
-</body>
-<p>I dont know how to code in HTML but I am learning.</p>
-<img src="math_work.png" alt="Math" width="500" height="333"><br/>
-<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link to a Youtube video.</a>
+	<html>
+		<head>
+			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<title>Home Page</title>
+			<link rel="stylesheet" href="CSS/mystyle.css">
+		</head>
+	<body>
+		<div id="wrapper">
+			<div class="content">
+				<nav id="navigation">
+					<a href="https://thienthecreator.github.io/Chess">Chess</a>
+					<a href="https://thienthecreator.github.io/FirstWebsite">First Website</a>
+				</nav>
+				<div class="picture">
+					<img src="img/self.jpg" id="pic"></img>
+				</div>
+				<div>
+					<h3>About Me</h3>
+					<p>
+						Hello, my name is Thien.<br>	
+						Welcome to my website!<br><br>
+					</p>
+				</div>
+			</div>
+			<div class="sky-container">
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+			</div>
+		</div>
+	</body>
 </html>
