Fixed image reference for github.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<a href="https://thienthecreator.github.io/FirstWebsite">First Website</a>
 				</nav>
 				<div class="picture">
-					<img src="img/self.jpg" id="pic"></img>
+					<img src="img/self.JPG" id="pic"></img>
 				</div>
 				<div>
 					<h3>About Me</h3>
