added music app link

--- a/index.html
+++ b/index.html
@@ -10,18 +10,26 @@
 		<div id="wrapper">
 			<div class="content">
 				<nav id="navigation">
-					<a href="https://thienthecreator.github.io/Chess">Chess</a>
-					<a href="https://thienthecreator.github.io/FirstWebsite">First Website</a>
+					<div id="iconsBox">
+						<a href="https://www.linkedin.com/in/thien-pham-585233173"><img id="linkedin"src="img/linkedInIcon.png" alt="LinkedIn"></a>
+						<a href="https://github.com/ThienTheCreator"><img id="github"src="img/GitHubIcon.png" alt="LinkedIn"></a>
+					</div>
 				</nav>
-				<div class="picture">
-					<img src="img/self.JPG" id="pic"></img>
-				</div>
 				<div>
 					<h3>About Me</h3>
 					<p>
 						Hello, my name is Thien.<br>	
 						Welcome to my website!<br><br>
 					</p>
+				</div>
+				<div>
+					<h3> Skills </h3>
+					<p> C++ <br> JavaScript/TypeScript <br> HTML <br> CSS <br> Python </p>
+				</div>
+				<div>
+					<h3>Projects</h3>
+					<a href="https://thienthecreator.github.io/Chess">Chess</a><br>
+					<a href="https://thienthecreator.github.io/Music-App-CSC-600">Music</a><br>
 				</div>
 			</div>
 			<div class="sky-container">
