fixed linked imag

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div class="content">
 				<nav id="navigation">
 					<div id="iconsBox">
-						<a href="https://www.linkedin.com/in/thien-pham-585233173"><img id="linkedin"src="img/linkedInIcon.png" alt="LinkedIn"></a>
+						<a href="https://www.linkedin.com/in/thien-pham-585233173"><img id="linkedin"src="img/LinkedInIcon.png" alt="LinkedIn"></a>
 						<a href="https://github.com/ThienTheCreator"><img id="github"src="img/GitHubIcon.png" alt="LinkedIn"></a>
 					</div>
 				</nav>
