--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<h3> Skills </h3>
 					<p> C++ <br> JavaScript/TypeScript <br> HTML <br> CSS <br> Python </p>
 				</div>
-				<div>
+				<div id="projects">
 					<h3>Projects</h3>
 					<a href="https://thienthecreator.github.io/Chess">Chess</a><br>
 					<a href="https://thienthecreator.github.io/Music-App-CSC-600">Music</a><br>
